--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/generative-ai": "^0.1.3",
     "@hookform/resolvers": "^3.3.2",
     "@kinde-oss/kinde-auth-nextjs": "^2.0.13",
+    "@mantine/hooks": "^7.3.2",
     "@pinecone-database/pinecone": "^1.1.2",
     "@prisma/client": "^5.7.0",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -41,20 +42,27 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.2",
     "react-loading-skeleton": "^3.3.1",
+    "react-markdown": "^9.0.1",
     "react-pdf": "^7.6.0",
     "react-resize-detector": "^9.1.0",
     "react-textarea-autosize": "^8.5.3",
+    "react-use-websocket": "^4.5.0",
     "redis": "^4.6.12",
     "simplebar-react": "^3.2.4",
+    "socket.io": "^4.7.2",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.1.0",
+    "web-streams-polyfill": "^3.2.1",
+    "ws": "^8.15.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/date-fns": "^2.6.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/ws": "^8.5.10",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
