this is one of the last commit

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@trpc/server": "^10.44.1",
     "@uploadthing/react": "^6.0.2",
     "ai": "^2.2.30",
+    "bufferutil": "^4.0.8",
     "bull": "^4.12.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -51,10 +52,13 @@
     "redis": "^4.6.12",
     "simplebar-react": "^3.2.4",
     "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
+    "sse": "^0.0.8",
     "stripe": "^14.10.0",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.1.0",
+    "utf-8-validate": "^5.0.10",
     "web-streams-polyfill": "^3.2.1",
     "ws": "^8.15.1",
     "zod": "^3.21.4"
@@ -64,6 +68,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/sse": "^0.0.0",
     "@types/ws": "^8.5.10",
     "autoprefixer": "^10",
     "eslint": "^8",
