--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@google/generative-ai": "^0.1.3",
@@ -14,7 +15,7 @@
     "@kinde-oss/kinde-auth-nextjs": "^2.0.13",
     "@mantine/hooks": "^7.3.2",
     "@pinecone-database/pinecone": "^1.1.2",
-    "@prisma/client": "^5.7.0",
+    "@prisma/client": "^5.7.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-progress": "^1.0.3",
