--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
     },
     "headers": [
       {
-        "source": "/*",
+        "source": "/:path*",
         "headers": [
           { "key": "Access-Control-Allow-Credentials", "value": "true" },
           { "key": "Access-Control-Allow-Origin", "value": "https://cph-redirect.onrender.com" },
