trying to fix the vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "functions": {
-      "/api/message": {
-        "maxDuration": 10
+      "api/message": {
+        "maxDuration": 30
       }
     },
     "headers": [
