--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.1.3",
     "@hookform/resolvers": "^3.3.2",
-    "@kinde-oss/kinde-auth-nextjs": "^2.0.13",
+    "@kinde-oss/kinde-auth-nextjs": "^2.1.0",
     "@mantine/hooks": "^7.3.2",
     "@pinecone-database/pinecone": "^1.1.2",
     "@prisma/client": "^5.7.0",
@@ -36,6 +36,7 @@
     "bull": "^4.12.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "codegpt-nextjs": "file:../../.vscode/extensions/danielsanmedium.dscodegpt-3.1.1/standalone",
     "date-fns": "^3.1.0",
     "langchain": "^0.0.210",
     "lucide-react": "^0.298.0",
