--- a/package.json
+++ b/package.json
@@ -38,12 +38,16 @@
     "clsx": "^2.0.0",
     "codegpt-nextjs": "file:../../.vscode/extensions/danielsanmedium.dscodegpt-3.1.1/standalone",
     "date-fns": "^3.1.0",
+    "exit-hook": "^4.0.0",
+    "highlight.js": "^11.9.0",
     "langchain": "^0.0.210",
     "lucide-react": "^0.298.0",
     "next": "13.5.4",
     "openai": "^4.24.0",
     "pdf-parse": "^1.1.1",
+    "prismjs": "^1.29.0",
     "react": "^18",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.2",
@@ -51,9 +55,16 @@
     "react-markdown": "^9.0.1",
     "react-pdf": "^7.6.0",
     "react-resize-detector": "^9.1.0",
+    "react-syntax-highlighter": "^15.5.0",
     "react-textarea-autosize": "^8.5.3",
     "react-use-websocket": "^4.5.0",
     "redis": "^4.6.12",
+    "rehype-highlight": "^7.0.0",
+    "rehype-prism": "^2.3.2",
+    "rehype-raw": "^7.0.0",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.0",
+    "remark-highlight.js": "^7.0.1",
     "sharp": "^0.33.1",
     "simplebar-react": "^3.2.4",
     "socket.io": "^4.7.2",
@@ -71,8 +82,11 @@
   "devDependencies": {
     "@types/date-fns": "^2.6.0",
     "@types/node": "^20",
+    "@types/prismjs": "^1.26.3",
     "@types/react": "^18",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "@types/sse": "^0.0.0",
     "@types/ws": "^8.5.10",
     "autoprefixer": "^10",
