--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@trpc/react-query": "^10.44.1",
     "@trpc/server": "^10.44.1",
     "@uploadthing/react": "^6.0.2",
+    "@vercel/speed-insights": "^1.0.7",
     "ai": "^2.2.30",
     "bufferutil": "^4.0.8",
     "bull": "^4.12.0",
