--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@trpc/react-query": "^10.44.1",
     "@trpc/server": "^10.44.1",
     "@uploadthing/react": "^6.0.2",
+    "@vercel/analytics": "^1.1.2",
     "@vercel/speed-insights": "^1.0.8",
     "ai": "^2.2.30",
     "bufferutil": "^4.0.8",
@@ -45,6 +46,7 @@
     "lucide-react": "^0.298.0",
     "next": "13.5.4",
     "openai": "^4.24.0",
+    "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
     "prismjs": "^1.29.0",
     "react": "^18",
