changing the price quota and some of minor changes to improve user experience

--- a/package.json
+++ b/package.json
@@ -44,10 +44,13 @@
     "highlight.js": "^11.9.0",
     "langchain": "^0.0.210",
     "lucide-react": "^0.298.0",
+    "mammoth": "^1.6.0",
     "next": "13.5.4",
     "openai": "^4.24.0",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
+    "pptx-compose": "^1.0.0",
+    "pptxgenjs": "^3.12.0",
     "prismjs": "^1.29.0",
     "react": "^18",
     "react-copy-to-clipboard": "^5.1.0",
@@ -73,9 +76,10 @@
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "sse": "^0.0.8",
-    "stripe": "^14.10.0",
+    "stripe": "^14.16.0",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
+    "textract": "^2.5.0",
     "uploadthing": "^6.1.0",
     "utf-8-validate": "^5.0.10",
     "web-streams-polyfill": "^3.2.1",
