--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.1.3",
-    "@hookform/resolvers": "^3.3.2",
+    "@hookform/resolvers": "^3.3.4",
     "@kinde-oss/kinde-auth-nextjs": "^2.1.0",
     "@mantine/hooks": "^7.3.2",
     "@pinecone-database/pinecone": "^1.1.3",
@@ -19,6 +19,7 @@
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
@@ -34,6 +35,7 @@
     "@vercel/analytics": "^1.1.2",
     "@vercel/speed-insights": "^1.0.8",
     "ai": "^2.2.30",
+    "axios": "^1.6.8",
     "bufferutil": "^4.0.8",
     "bull": "^4.12.0",
     "class-variance-authority": "^0.7.0",
@@ -56,7 +58,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.49.2",
+    "react-hook-form": "^7.51.3",
     "react-loading-skeleton": "^3.3.1",
     "react-markdown": "^9.0.1",
     "react-pdf": "^7.6.0",
@@ -71,6 +73,7 @@
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
     "remark-highlight.js": "^7.0.1",
+    "resend": "^3.2.0",
     "sharp": "^0.33.1",
     "simplebar-react": "^3.2.4",
     "socket.io": "^4.7.2",
@@ -84,11 +87,12 @@
     "utf-8-validate": "^5.0.10",
     "web-streams-polyfill": "^3.2.1",
     "ws": "^8.15.1",
-    "zod": "^3.21.4"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/date-fns": "^2.6.0",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/prismjs": "^1.26.3",
     "@types/react": "^18",
     "@types/react-copy-to-clipboard": "^5.0.7",
@@ -99,6 +103,7 @@
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
+    "nodemailer": "^6.9.13",
     "postcss": "^8",
     "prisma": "^5.8.1",
     "tailwindcss": "^3",
