--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@google/generative-ai": "^0.1.3",
     "@hookform/resolvers": "^3.3.4",
     "@kinde-oss/kinde-auth-nextjs": "^2.1.0",
+    "@liveblocks/client": "^1.11.3",
+    "@liveblocks/node": "^1.11.3",
+    "@liveblocks/react": "^1.11.3",
     "@mantine/hooks": "^7.3.2",
     "@pinecone-database/pinecone": "^1.1.3",
-    "@prisma/client": "^5.8.1",
+    "@prisma/client": "^5.14.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -24,6 +27,10 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@solana/pay": "^0.2.5",
+    "@solana/spl-token": "^0.4.6",
+    "@solana/spl-token-registry": "^0.2.4574",
+    "@solana/web3.js": "^1.91.8",
     "@swc/core": "^1.3.102",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^4.36.1",
@@ -36,6 +43,7 @@
     "@vercel/speed-insights": "^1.0.8",
     "ai": "^2.2.30",
     "axios": "^1.6.8",
+    "bignumber.js": "^9.1.2",
     "bufferutil": "^4.0.8",
     "bull": "^4.12.0",
     "class-variance-authority": "^0.7.0",
@@ -47,6 +55,7 @@
     "langchain": "^0.0.210",
     "lucide-react": "^0.298.0",
     "mammoth": "^1.6.0",
+    "moralis": "^2.26.1",
     "next": "13.5.4",
     "openai": "^4.24.0",
     "pdf-lib": "^1.17.1",
@@ -54,6 +63,7 @@
     "pptx-compose": "^1.0.0",
     "pptxgenjs": "^3.12.0",
     "prismjs": "^1.29.0",
+    "qr-code-styling": "^1.6.0-rc.1",
     "react": "^18",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
@@ -105,7 +115,7 @@
     "eslint-config-next": "13.5.4",
     "nodemailer": "^6.9.13",
     "postcss": "^8",
-    "prisma": "^5.8.1",
+    "prisma": "^5.14.0",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
