--- a/package.json
+++ b/package.json
@@ -34,6 +34,20 @@
     "@swc/core": "^1.3.102",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^4.36.1",
+    "@tiptap/extension-bullet-list": "^2.4.0",
+    "@tiptap/extension-document": "^2.4.0",
+    "@tiptap/extension-highlight": "^2.4.0",
+    "@tiptap/extension-image": "^2.4.0",
+    "@tiptap/extension-paragraph": "^2.4.0",
+    "@tiptap/extension-task-item": "^2.4.0",
+    "@tiptap/extension-task-list": "^2.4.0",
+    "@tiptap/extension-text": "^2.4.0",
+    "@tiptap/extension-text-align": "^2.4.0",
+    "@tiptap/extension-text-style": "^2.4.0",
+    "@tiptap/extension-typography": "^2.4.0",
+    "@tiptap/extension-underline": "^2.4.0",
+    "@tiptap/react": "^2.4.0",
+    "@tiptap/starter-kit": "^2.4.0",
     "@trpc/client": "^10.44.1",
     "@trpc/next": "^10.44.1",
     "@trpc/react-query": "^10.44.1",
@@ -52,6 +66,10 @@
     "date-fns": "^3.1.0",
     "exit-hook": "^4.0.0",
     "highlight.js": "^11.9.0",
+    "html-to-jsx": "^0.0.4",
+    "html2canvas": "^1.4.1",
+    "jsdom": "^24.0.0",
+    "jspdf": "^2.5.1",
     "langchain": "^0.0.210",
     "lucide-react": "^0.298.0",
     "mammoth": "^1.6.0",
@@ -84,12 +102,14 @@
     "remark-gfm": "^4.0.0",
     "remark-highlight.js": "^7.0.1",
     "resend": "^3.2.0",
+    "sass": "^1.77.2",
     "sharp": "^0.33.1",
     "simplebar-react": "^3.2.4",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "sse": "^0.0.8",
     "stripe": "^14.16.0",
+    "styled-components": "^6.1.11",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "textract": "^2.5.0",
