--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@google-cloud/firestore": "^7.7.0",
     "@google/generative-ai": "^0.1.3",
     "@hookform/resolvers": "^3.3.4",
     "@kinde-oss/kinde-auth-nextjs": "^2.1.0",
@@ -65,6 +66,9 @@
     "codegpt-nextjs": "file:../../.vscode/extensions/danielsanmedium.dscodegpt-3.1.1/standalone",
     "date-fns": "^3.1.0",
     "exit-hook": "^4.0.0",
+    "firebase": "^10.12.2",
+    "firebase-admin": "^11.11.1",
+    "firebase-functions": "^5.0.1",
     "highlight.js": "^11.9.0",
     "html-to-jsx": "^0.0.4",
     "html2canvas": "^1.4.1",
