--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@google-cloud/firestore": "^7.7.0",
+    "@google-cloud/text-to-speech": "^5.3.0",
     "@google/generative-ai": "^0.1.3",
     "@hookform/resolvers": "^3.3.4",
     "@kinde-oss/kinde-auth-nextjs": "^2.1.0",
@@ -65,6 +66,7 @@
     "clsx": "^2.0.0",
     "codegpt-nextjs": "file:../../.vscode/extensions/danielsanmedium.dscodegpt-3.1.1/standalone",
     "date-fns": "^3.1.0",
+    "dompurify": "^3.1.5",
     "exit-hook": "^4.0.0",
     "firebase": "^10.12.2",
     "firebase-admin": "^11.11.1",
@@ -125,6 +127,7 @@
   },
   "devDependencies": {
     "@types/date-fns": "^2.6.0",
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
     "@types/prismjs": "^1.26.3",
