--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@google-cloud/firestore": "^7.7.0",
     "@google-cloud/text-to-speech": "^5.3.0",
+    "@google-cloud/translate": "^8.3.0",
     "@google/generative-ai": "^0.1.3",
     "@hookform/resolvers": "^3.3.4",
     "@kinde-oss/kinde-auth-nextjs": "^2.1.0",
