--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-google-drive-picker": "^1.2.2",
     "react-hook-form": "^7.51.3",
     "react-loading-skeleton": "^3.3.1",
     "react-markdown": "^9.0.1",
