--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "@pinecone-database/pinecone": "^1.1.3",
     "@prisma/client": "^5.8.1",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
@@ -98,10 +101,12 @@
     "react-loading-skeleton": "^3.3.1",
     "react-markdown": "^9.0.1",
     "react-pdf": "^7.6.0",
+    "react-player": "^2.16.0",
     "react-resize-detector": "^9.1.0",
     "react-syntax-highlighter": "^15.5.0",
     "react-textarea-autosize": "^8.5.3",
     "react-use-websocket": "^4.5.0",
+    "react-zoom-pan-pinch": "^3.5.1",
     "redis": "^4.6.12",
     "rehype-highlight": "^7.0.0",
     "rehype-prism": "^2.3.2",
