--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@google/generative-ai": "^0.1.3",
     "@hookform/resolvers": "^3.3.4",
     "@kinde-oss/kinde-auth-nextjs": "^2.1.0",
+    "@langchain/community": "^0.2.12",
     "@liveblocks/client": "^1.11.3",
     "@liveblocks/node": "^1.11.3",
     "@liveblocks/react": "^1.11.3",
@@ -66,6 +67,7 @@
     "bignumber.js": "^9.1.2",
     "bufferutil": "^4.0.8",
     "bull": "^4.12.0",
+    "cheerio": "^1.0.0-rc.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "codegpt-nextjs": "file:../../.vscode/extensions/danielsanmedium.dscodegpt-3.1.1/standalone",
